# compfin-assignment-3

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: pytest.yaml
src/compfin_assignment_3/: __init__.py  barrier_option.py  compare_analytic_mc.py  mc_method.py  pricing.py  s_&_p_calibration.py
src/compfin_assignment_3/cli/: __init__.py
src/compfin_assignment_3/cli/binary_option_greeks/: __init__.py  delta_calc.py
src/compfin_assignment_3/cli/option_pricing/: binary_option_heat_eq.py  binary_option_heat_eq_crank_nic.py  binary_option_heat_eq_imp.py  binary_option_mc_sim.py
src/compfin_assignment_3/cli/sensitivity_test/: __init__.py  risk_free_rate.py  time_mature.py  volatility.py
src/compfin_assignment_3/data_s_p/: interp_ivol_surfaces.npy  raw_ivol_surfaces.npy
src/compfin_assignment_3/option_pricing/: __init__.py  binary_option.py  binary_option_delta.py  model_settings.py  numerical_schemes.py
src/compfin_assignment_3/option_pricing/heat_equation_sim/: pricing.py  settings.py
src/compfin_assignment_3/option_pricing/mc_sim/: numerical_schemes.py  pricing.py  settings.py
