[project]
name = "compfin-assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "typer>=0.15.4",
]

[project.scripts]
compfin = "compfin_assignment_3.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
